--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend skeleton</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Pictures taken by the musically controlled camera made by Campbell Docherty for his Physical Computing final project."
+    />
+    <title>360°</title>
   </head>
   <body>
     <div id="root"></div>
